--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://UCC2023_app:03102022ucc@cluster0.fqwgmkp.mongodb.net/TodoList?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://Nghia:Nghia2003@cluster0.ofbqtwb.mongodb.net/ToDoApp?retryWrites=true&w=majority
